# sqlbear

./: .gitignore  LICENSE  README.rst  conf.py  index.rst  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  index.rst  modules.rst  sqlbear.rst
sqlbear/: __init__.py  _version.py  bson_connector.py  core.py  sql_helpers.py
tests/: test_core.py
